--- a/boldgrid-theme-framework/assets/scss/boldgrid/_elements.scss
+++ b/boldgrid-theme-framework/assets/scss/boldgrid/_elements.scss
@@ -1,6 +1,7 @@
 .main {
 	padding: 2.8rem;
 	width: 100%;
+	flex: 1 0 auto;
 }
 .site-content {
 	display: flex;
